demos/src/styles/theme.css
/* define light and dark themes, and respect the system preference for using dark themes */
:root { 
    --abotw-black: 18, 18, 18;
    --abotw-darkgray: 51, 51, 51;
    --abotw-gray: 191, 191, 191;
    --abotw-lightgray: 200, 200, 200;
    --abotw-white: 255, 255, 255;
    --abotw-darkblue: 8, 51, 55;
    --abotw-lightblue: 172, 235, 243;
    --abotw-lightorange: 255, 201, 160;
    --abotw-yellow: 253, 253, 150;
    --abotw-transition: transform .1s cubic-bezier(0.12, 0, 0.39, 0);
}
body {
    --abotw-text-color: var(--abotw-black);
    --abotw-page-background-color: var(--abotw-white);
    --abotw-link-color: var(--abotw-darkblue);
    --abotw-icon-color: var(--abotw-black);
    --abotw-hover-color: var(--abotw-lightgray);
    --abotw-toggle-color: var(--abotw-darkblue);
    --abotw-tab-focus-color: var(--abotw-lightorange);
    --abotw-sync-highlight-background-color: var(--abotw-yellow);
    --abotw-sync-highlight-color: var(--abotw-text-color);
    --abotw-search-highlight-background-color: var(--abotw-lightblue);
    --abotw-search-highlight-color: var(--abotw-text-color);
    --abotw-border-color: var(--abotw-darkgray);
    
    transition: var(--transition);

}
body.dark {
    --abotw-text-color: var(--abotw-white);
    --abotw-page-background-color: var(--abotw-black);
    --abotw-link-color: var(--abotw-lightblue);
    --abotw-icon-color: var(--abotw-white);
    --abotw-hover-color: var(--abotw-darkgray);
    --abotw-toggle-color: var(--abotw-lightblue);
    --abotw-tab-focus-color: var(--abotw-white);
    --abotw-sync-highlight-background-color: var(--abotw-page-background-color);
    --abotw-sync-highlight-color: var(--abotw-yellow);
    --abotw-search-highlight-background-color: var(--abotw-page-background-color);
    --abotw-search-highlight-color: var(--abotw-lightblue);
    
}
@media (prefers-color-scheme: dark) {
    body { /* "dark mode" as preferred by the system */
        --abotw-text-color: var(--abotw-white);
        --abotw-page-background-color: var(--abotw-black);
        --abotw-link-color: var(--abotw-lightblue);
        --abotw-icon-color: var(--abotw-white);
        --abotw-hover-color: var(--abotw-darkgray);
        --abotw-toggle-color: var(--abotw-lightblue);
        --abotw-tab-focus-color: var(--abotw-white);
        --abotw-sync-highlight-background-color: var(--abotw-page-background-color);
        --abotw-sync-highlight-color: var(--abotw-yellow);
        --abotw-search-highlight-background-color: var(--abotw-page-background-color);
        --abotw-search-highlight-color: var(--abotw-lightblue);
    }
    /* the manual toggle can override the system theme */
    body.abotw-prefers-color-scheme-override {
        /* "light mode" */
        --abotw-text-color: var(--abotw-black);
        --abotw-page-background-color: var(--abotw-white);
        --abotw-link-color: var(--abotw-darkblue);
        --abotw-icon-color: var(--abotw-black);
        --abotw-hover-color: var(--abotw-lightgray);
        --abotw-toggle-color: var(--abotw-darkblue);
        --abotw-tab-focus-color: var(--abotw-lightorange);
        --abotw-sync-highlight-background-color: var(--abotw-yellow);
        --abotw-sync-highlight-color: var(--abotw-text-color);
        --abotw-search-highlight-background-color: var(--abotw-lightblue);
        --abotw-search-highlight-color: var(--abotw-text-color);
    }
}

